# bulletproof-video-playback

./: .flake8  .gitignore  CHANGELOG.md  DOCS-UPDATE-SUMMARY.md  GEMINI.md  KEYFRAME_FEATURE.md  LINUX_PORT_SUMMARY.md  PHASE-3.1-OVERVIEW.md  PHASE-3.1-START-HERE.md  PHASE-3.1-TECH-DECISIONS.md  PHASE-3.1-WEB-DASHBOARD.md  PHASE_2_4_COMPLETE.md  QUICK-REFERENCE.md  QUICK_REFERENCE.md  README.md  RELEASE_STATUS.html  ROADMAP.md  SCRIPTS_STRUCTURE.md  TESTING_KEYFRAMES.md  TIER-1-FIX-SHIP.md  clean_repo.sh  cli-integration-ready.md  monitor.json  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  test_keyframes.py  test_monitor.yaml
.gemini/commands/monitor/: troubleshoot.toml
.gemini/commands/plan/: bvp.toml
.gemini/commands/profile/: advice.toml
.gemini/commands/roadmap/: check.toml
.github/workflows/: ci.yml  release.yml  security.yml  test.yml
bulletproof/: __init__.py
bulletproof/api/: __init__.py  models.py  routes.py  server.py
bulletproof/cli/: __init__.py  main.py
bulletproof/cli/commands/: __init__.py  analyze.py  batch.py  config.py  monitor.py  transcode.py  tui.py  tui_textual.py
bulletproof/config/: __init__.py  loader.py  manager.py
bulletproof/core/: __init__.py  config.py  job.py  monitor.py  profile.py  queue.py  rules.py
bulletproof/services/: __init__.py  monitor_service.py
bulletproof/static/dashboard/: dashboard.css  dashboard.js  index.html
bulletproof/tui/: __init__.py  main.py
bulletproof/tui_textual/: __init__.py  app.py
bulletproof/tui_textual/screens/: __init__.py  about.py  home.py  settings.py  transcode.py
bulletproof/tui_textual/styles/: __init__.py  app.css
bulletproof/tui_textual/widgets/: __init__.py  file_picker_widget.py  profile_selector.py
bulletproof/utils/: __init__.py  validation.py
conductor/: qlab-performance-integration.md
docs/: API_QUICKSTART.md  CURRENT_STATUS.md  Current Status Report.md  DASHBOARD_GUIDE.md  MONITOR_GUIDE.md  ROADMAP.md  SCRIPTS_STRUCTURE.md  SECURITY_LOG.md  TUI_DEPRECATION.md
docs/archive/: PHASE_2.4_COMPLETION.md
docs/features/: FRAMERATE_HANDLING.md  KEYFRAME_FEATURE.md
docs/phase-3.1/: PHASE-3.1-QUICKSTART.md  PHASE-3.1-RESOURCES.md  PHASE-3.1-START-HERE.md  PHASE_3.1_DAY_1_COMPLETE.md  PHASE_3.1_DAY_2_COMPLETE.md  PHASE_3.1_DAY_3_COMPLETE.md
docs/testing/: TESTING_KEYFRAMES.md
examples/: dashboard_example.py  monitor-example.yaml  monitor-live.yaml  monitor-theater.yaml
linux/: IMPLEMENTATION_GUIDE.md  QUICK_START.md  README.md  install.sh  profiles.json
linux/scripts/: analyze.sh  batch.sh  config.sh  list-profiles.sh  transcode.sh
scripts/: README.md  analyze.sh  list-profiles.sh  profiles.json
tests/: __init__.py  test_api.py  test_config_loader.py  test_monitor_integration.py  test_monitor_service.py  test_profiles.py  test_validation.py
